# ChangeLog for dev-db/postgresql-server
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.15 2008/12/03 19:27:06 caleb Exp $

*postgresql-server-8.2.11 (03 Dec 2008)

  03 Dec 2008; Caleb Tennis <caleb@gentoo.org>
  +postgresql-server-8.2.11.ebuild, -postgresql-server-8.3.4.ebuild,
  +postgresql-server-8.3.5.ebuild:
  version bumps

*postgresql-server-8.3.5 (11 Nov 2008)

  11 Nov 2008; Caleb Tennis <caleb@gentoo.org>
  -postgresql-server-8.3.4.ebuild, +postgresql-server-8.3.5.ebuild:
  version bump

  01 Nov 2008; Robin H. Johnson <robbat2@gentoo.org> Manifest:
  Fix Manifest corruption that was added by caleb on Sept 25, due to a
  zero-byte postgresql-7.4.19.tar.bz2 on his system.

  28 Sep 2008; Caleb Tennis <caleb@gentoo.org>
  -postgresql-server-8.2.7.ebuild, -postgresql-server-8.3.1.ebuild,
  -postgresql-server-8.3.3.ebuild:
  Remove older versions

  28 Sep 2008; Caleb Tennis <caleb@gentoo.org> files/postgresql.conf-8.3,
  files/postgresql.init-8.3:
  Change conf and init files for 8.3 for a little nicer startup/shutdown
  with options.

  This is per 228639 and thanks to a patch from Jeff Frost
  (jeff@frostconsultingllc.com)

  25 Sep 2008; Robin H. Johnson <robbat2@gentoo.org> Manifest:
  Caleb's last commit broke the Manifest for 7.4.19, fix it up.

*postgresql-server-8.3.4 (23 Sep 2008)
*postgresql-server-8.2.10 (23 Sep 2008)

  23 Sep 2008; Caleb Tennis <caleb@gentoo.org>
  +postgresql-server-8.2.10.ebuild, +postgresql-server-8.3.4.ebuild:
  version bump, latest unstable versions

  05 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

*postgresql-server-8.3.3 (14 Jun 2008)
*postgresql-server-8.2.9 (14 Jun 2008)
*postgresql-server-8.1.13 (14 Jun 2008)
*postgresql-server-8.0.17 (14 Jun 2008)
*postgresql-server-7.4.21 (14 Jun 2008)

  14 Jun 2008; Tiziano Müller <dev-zero@gentoo.org>