@@ -40,16 +40,16 @@ DIST postgresql-8.2.10.tar.bz2 12551773 RMD160 46c7a3e98705dfa0d68c2893773c40d4b
 DIST postgresql-8.2.11.tar.bz2 12564132 RMD160 30e1f792a9168fa78b1c7d27742c6f98a7e2a08c SHA1 5410c25a369f19fc4a376f942351553aff710d8f SHA256 64ef6f38556d88356b7aea5496c9394ddf6e1afabda17db7ee15ddc6af82356b
 DIST postgresql-8.2.9.tar.bz2 12558265 RMD160 00fe295d928e77a2dff136795ba846ae3ac08569 SHA1 aeaf0487d031c56518af002f76f779c23baf6391 SHA256 95ea81e0fa00184a63dae960007be95200343b24dec6cdea41bc809db29f22c2
 DIST postgresql-8.3.5.tar.bz2 14052114 RMD160 d70eec56c2498ba83319f21e818463a113f3540b SHA1 7615fea044473410b9985dc76a8046d715a620b1 SHA256 e03f0c472b0ab8c4374ba13a1534d2c940c6235c9f74f2c95f97855eff185448
-EBUILD postgresql-server-7.3.21.ebuild 9021 RMD160 48af14ad1f0f5d9af1ab1bbee786c0c5185f2e1c SHA1 0a594f6bb163070d8a0af2fbd56fdadbaa2ad050 SHA256 52ac83e6038935db6f0edb8c7ee0fae61e68d77061c6b41bc99e155bc2d75321
-EBUILD postgresql-server-7.4.19.ebuild 8951 RMD160 eaee743bc8574efe01a8cc30af04c41ed1215628 SHA1 0afad9d1fba84783849f999e17d823a3e3e88906 SHA256 15c7bd6c7d8c404bbd9461262067301dd9606eb0067b065347c03f17c0d9ef09
-EBUILD postgresql-server-7.4.21.ebuild 8924 RMD160 de1d0e68b8ffaf453a6848c036e173c42cb456c9 SHA1 6b14b0a92cdc4c43f9c446ba52c5154e2c9996d7 SHA256 74ec07c96dce46f8a23d09ff676d583dd6362694deae001c79bfffb2d1bb017f
-EBUILD postgresql-server-8.0.15.ebuild 9150 RMD160 7a732f8c7791976955ec0fcecec06b6b2705482b SHA1 a78f72197c4dc7169ef13e3bb12a6c79a40a46d0 SHA256 597f22ac4c4fe19a9e1fa300c77c7bea56bb6e5630e693a555e5a69df8450cb3
-EBUILD postgresql-server-8.0.17.ebuild 9120 RMD160 2db4b6c9d52685277ba0969ac953d10f557cebd4 SHA1 b8fc088e06554cc351d45d9088497c2e47fc8f98 SHA256 6607f91436dec28b28218cabd21eedc24d46769087ae5d8e629c6848d96ed442
-EBUILD postgresql-server-8.1.11.ebuild 9268 RMD160 a1039e8ef27793419e2cfb11cd2fb29264ba7f3a SHA1 391677189aa5074f6b12bb427aa0292c8bafa69b SHA256 fdf24b21f596583c90ffdc4ffe9b4b7e9067aa13418dc3b0a884bedb75ddc690
-EBUILD postgresql-server-8.1.13.ebuild 9206 RMD160 1d4a8bee7bc396d0f45018ad02e14ee5b8ca633c SHA1 069b65dcbdad0a62db127829b1a69a06176ff056 SHA256 c331589472d7e142fb924235cea063b78923dbda797e392d4c872204510360ea
-EBUILD postgresql-server-8.2.10.ebuild 9503 RMD160 5c9ede0483ec0f2b6d4837588cd650d43b5adfdd SHA1 b45dd9cffd0777e10674c8e3fc789ccdf088776c SHA256 b804620aa7f75ceb5a52d7db7b4005c333a168d369ba4142782d307a1747b8c9
-EBUILD postgresql-server-8.2.11.ebuild 9503 RMD160 ab50f245437019140ed14d190f162c236dbd3bba SHA1 4dac9868f849ce2788e8ad7434269a8e63a645b1 SHA256 f14e58e24302b972c7394b34d372a7ff3d3400a3429170f19d44714fc758101f
-EBUILD postgresql-server-8.2.9.ebuild 9505 RMD160 55374d201f8f7fcd5c856652216ca5ee6053b5fc SHA1 5d633cb7725758fc4b96053735952b1287fd388f SHA256 3cab96dae890fe4e47b843b43102f58fa328b5f3df84043bbe03c94974700be8
-EBUILD postgresql-server-8.3.5.ebuild 9662 RMD160 48e9383552053aca0728635ba977412fedbcfc73 SHA1 8a2076011865de5e03e75f80fc64d61bff70ec92 SHA256 8c6e0a3732d8ce8460155d9862fb8e6720fec95a2e62388ed8011eab9113e2e2
-MISC ChangeLog 12421 RMD160 ab4227c66ff5c12acc6ac4d3d641ffdcab7dfd41 SHA1 8976820e389b4cfbe328e8b05da4f813245b2151 SHA256 bcef953df4440ef274ce3ace7af6cc9bbc11452d590ed75f2eaed714e6d1772c
+EBUILD postgresql-server-7.3.21.ebuild 9019 RMD160 0e5ec243025948b144167a8c0d0731260b78ae21 SHA1 53fe45334e9ef5273bb2ff4f360fff837a87fc0b SHA256 7bc20b892f89921e167047dfd9203bbae6a3d9891b0020dc9e6b585b1838f7b0
+EBUILD postgresql-server-7.4.19.ebuild 8949 RMD160 67cfd39a6169d6bf53f489b20c0eafd8b8a723b8 SHA1 31598c88ce8b2172cac286e6649272eaa9e44fde SHA256 59c38042146543f6d23a92da3f2501293866cc2b2e40c5c925b630ce2e69bb40
+EBUILD postgresql-server-7.4.21.ebuild 8922 RMD160 0b31ddfdd86e002290b15ce2bfdcb315cc82c0de SHA1 36bb0a092a8f437cca2da8879db3ef2f23e12ea4 SHA256 5ca039e5dbe8ef88414657b9b962fde37e6b2625255fd49ab12e5503adf30e94
+EBUILD postgresql-server-8.0.15.ebuild 9148 RMD160 a5f3a7e1c309da332349f814a97451b377d1eff9 SHA1 688986f6be79521210e0a0b7bf7caab9185b3d62 SHA256 3b14fd54498a46d1b3deca7e0762d8b9b8b5ae0846b38f3ff6ccd15260fbf219
+EBUILD postgresql-server-8.0.17.ebuild 9118 RMD160 c74a415fef33b0043c1bc4e553de175591b0fd9f SHA1 d28b60d1537bd57ee6d49dec0e4a93775b81c3bf SHA256 79156d7c17bae007a66345add8410fdfa46033fb366f223539b408d09789e0c1
+EBUILD postgresql-server-8.1.11.ebuild 9266 RMD160 ff19bdf6d066005cd01d5290a71de0d494628712 SHA1 35bfd2fbe3065439f3a17bdafaf241a5e8cb4044 SHA256 4dde875f0ebac7ad41332f18e948be652b9564ec296fc6f58b8804c0b3283edb
+EBUILD postgresql-server-8.1.13.ebuild 9204 RMD160 b880903281099f6353290a17b2e93a8c22087b1a SHA1 cb08bd8cd5ded4ea83d07178069619ab1956e7b8 SHA256 99718d50448491ff4c3d18df2035c0279022ee4c551b1bfb79afc1efa95750b9
+EBUILD postgresql-server-8.2.10.ebuild 9501 RMD160 5cd763dc26c50cc5be04a68bed57e0bcab58209a SHA1 a79da1f874e1855e790da8d73832aa5fef869a20 SHA256 5aa97f17c0f166c92df027dae6230ada2757dd5c58abc0c9e69e47ca2fbb48dd
+EBUILD postgresql-server-8.2.11.ebuild 9501 RMD160 eeb18cde551b453aa44be17254b4b5771332a29c SHA1 80c31dc86e20c54238028d78da0c8a773b7b7e42 SHA256 d869de49429bf168feb9e6891e5c8571b0c55a4efa490bab7f76f508e89a9cd6
+EBUILD postgresql-server-8.2.9.ebuild 9503 RMD160 ad5a432332c19d02db23e5791bb4c68222d93920 SHA1 02e5e465f4a1015e1353a6cb253fd31ca8c3beac SHA256 8ed3f8a110f37e0f874bd7d190971dbd20aef7e09fd80a68ae78bcebaca71370
+EBUILD postgresql-server-8.3.5.ebuild 9660 RMD160 ed87010903895ca834e2eeee3abd9271135ce375 SHA1 890d48e68ea2a771e0e18fb55578c7d02b44beb9 SHA256 177013785b184ea9f861cf980a9ad73b047fe4ac4994cad9705023640d02898e
+MISC ChangeLog 12878 RMD160 214eadc3b2ecfdf975d74e6f6026ca3dec4829f8 SHA1 f24c19910af91269ff0de1c22863344bfe7b7998 SHA256 dfccdfea06e82910aaa44aded4c581b0eceff37b9b63928745186bbb00bedcb0
 MISC metadata.xml 278 RMD160 70d8f6a6bc3d6619380cee3c0bc2179cf6a5bf28 SHA1 ca266604cf761d9ea76b5ec298ac553156c1c21e SHA256 0ec3e7bdc08e61c19df6ef7f5a1a5a2d2aeabb001c2efca4bdfe947e71a450b0
