@@ -6,7 +6,7 @@ mirror://postgresql/source/v7.4.21/postgresql-7.4.21.tar.bz2
 http://www.postgresql.org/
 POSTGRESQL
 PostgreSQL server
-~amd64 ~x86
+amd64 x86
 toolchain-funcs portability versionator multilib libtool autotools eutils
 doc perl python selinux tcl xml nls kernel_linux linguas_cs linguas_de linguas_es linguas_fr linguas_hr linguas_hu linguas_it linguas_nb linguas_pt_BR linguas_ru linguas_sl linguas_sv linguas_tr linguas_zh_CN linguas_zh_TW
 
