@@ -6,7 +6,7 @@ mirror://postgresql/source/v8.0.17/postgresql-8.0.17.tar.bz2
 http://www.postgresql.org/
 POSTGRESQL
 PostgreSQL server
-~amd64 ~x86
+amd64 x86
 toolchain-funcs portability versionator multilib libtool autotools eutils
 doc perl python selinux tcl xml nls kernel_linux linguas_af linguas_cs linguas_de linguas_es linguas_fa linguas_fr linguas_hr linguas_hu linguas_it linguas_ko linguas_nb linguas_pl linguas_pt_BR linguas_ro linguas_ru linguas_sk linguas_sl linguas_sv linguas_tr linguas_zh_CN linguas_zh_TW
 
