@@ -6,7 +6,7 @@ mirror://postgresql/source/v8.3.5/postgresql-8.3.5.tar.bz2
 http://www.postgresql.org/
 POSTGRESQL
 PostgreSQL server
-~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd
+~alpha amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc x86 ~x86-fbsd
 toolchain-funcs portability versionator multilib libtool autotools eutils
 doc perl python selinux tcl uuid xml nls kernel_linux linguas_af linguas_cs linguas_de linguas_es linguas_fa linguas_fr linguas_hr linguas_hu linguas_it linguas_ko linguas_nb linguas_pl linguas_pt_BR linguas_ro linguas_ru linguas_sk linguas_sl linguas_sv linguas_tr linguas_zh_CN linguas_zh_TW
 
