@@ -2,6 +2,15 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.15 2008/12/03 19:27:06 caleb Exp $
 
+  17 Jan 2009; Caleb Cushing <xenoterracide@gmail.com>
+  postgresql-server-7.3.21.ebuild, postgresql-server-7.4.19.ebuild,
+  postgresql-server-7.4.21-r1.ebuild, postgresql-server-8.0.15.ebuild,
+  postgresql-server-8.0.17.ebuild, postgresql-server-8.1.11.ebuild,
+  postgresql-server-8.1.13.ebuild, postgresql-server-8.2.10.ebuild,
+  postgresql-server-8.2.11.ebuild, postgresql-server-8.2.9.ebuild,
+  postgresql-server-8.3.5.ebuild:
+  mark stable bug 230817
+
 *postgresql-server-8.2.11 (03 Dec 2008)
 
   03 Dec 2008; Caleb Tennis <caleb@gentoo.org>
